-Added line break on jumbo title for small viewports for aesthetics, - Placed media queries on the bottom of css.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </head>
 
 <body style="margin: 0; overflow-x: hidden;">
-    <div class="jumbotron"
-        style="background-image: linear-gradient(180deg, #00C9FF 0%, #00B1FF 50%, #0099FF 100%); height: 600px; position: relative; overflow: hidden; z-index: 1; max-width: 100%; max-height: 100%; margin-bottom: 0; border-radius: 0;padding: 0;">
+    <div class="jumbotron">
         <!-- <div class="svg-container">
             <svg width="180" height="auto" style="position: absolute; left: 10; top: 20; z-index: -1;"
                 viewBox="0 0 100 900" xmlns="http://www.w3.org/2000/svg">
@@ -37,7 +36,7 @@
         </div> -->
         
         <h1 id="jumbo_title">
-            Get More Leads, <br> With Less Effort 24/7, 7 Days a Week <br> We Guarantee It
+            Get More Leads, <br class="d-block d-sm-none"> With Less Effort 24/7, <br>7 Days a Week <br> We Guarantee It
         </h1>
 
         <div id="jumbo_emailform">
@@ -54,7 +53,7 @@
         </div> -->
 
 
-<svg class="svg-container jumbo_blob" width="100px" height="144px" viewBox="0 0 163 144" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="max-height: 100%; max-width: 100%; position: absolute; z-index: -1; left: 500px; top: 70%;">
+<svg class="svg-container jumbo__blob" width="100px" height="144px" viewBox="0 0 163 144" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="max-height: 100%; max-width: 100%; position: absolute; z-index: -1; left: 500px; top: 70%;">
     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="Desktop" transform="translate(-879.000000, -749.000000)" fill="#D3D3D3" fill-rule="nonzero">
             <g id="Blobs" transform="translate(8.559002, 149.101243)">
@@ -67,7 +66,7 @@
 </svg>
 
 
-<svg class="svg-container jumbo_blob" width="100px" height="120px" viewBox="0 0 300 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="max-height: 100%; max-width: 100%; position: absolute; z-index: -1; left: 2%; top: 1%;">
+<svg class="svg-container jumbo__blob" width="100px" height="120px" viewBox="0 0 300 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="max-height: 100%; max-width: 100%; position: absolute; z-index: -1; left: 2%; top: 1%;">
     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="Desktop" transform="translate(-36.000000, -414.000000)" fill="#D3D3D3" fill-rule="nonzero">
             <g id="Hero" transform="translate(-3.145085, 0.000000)">
