--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
       <div class="collapse navbar-collapse in" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link glink" href="#"
+            <a class="nav-link" href="#"
               >About<span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a href="STREET KITCHEN - Order Online/streetkitchen_menu-selector.html" class="nav-link">Services</a>
+            <a href="#" class="nav-link">Services</a>
           </li>
           <li class="nav-item">
-            <a href="STREET KITCHEN - Our Locations/streetkitchen_location.html" id="nav-link__lastItem" class="nav-link"
+            <a href="#" id="nav-link__lastItem" class="nav-link"
               >Contact</a>
           </li>
         </ul>
