- Added media queries for viewports under 320 px in width - Added Phone Image to Jumbotron - Extended Jumbotron width for viewports under 320 px in width

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
             Get More Leads, <br class="d-block d-sm-none"> With Less Effort 24/7, <br>7 Days a Week <br> We Guarantee It
         </h1>
 
+        <img id="phone_image" src="pictures/Phone Hero Image.png" alt="">
+
         <div id="jumbo_emailform">
             
         </div>
