--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         
         
         <h1 id="jumbo_title">
-            Get More Leads, <br class="d-block d-sm-none"> With Less Effort 24/7, <br>7 Days a Week <br> We Guarantee It
+            Get More Leads, <br class="d-block d-sm-none"> With Less Effort <br class="d-none d-lg-block d-xl-none d-xl-block"> 24/7, <br class="d-lg-none">7 Days a Week <br> We Guarantee It
         </h1>
 
         <img id="phone_image" src="pictures/Phone Hero Image.png" alt="">
