- Added jumbotron email form button and its subsequent styles from the design.
-Added a placeholder for the jumbotron title for design and styling reference in relation to other elements in the form.

--- a/index.html
+++ b/index.html
@@ -118,10 +118,12 @@
     
     <div>
       <form id="jumbo_emailform">
-        <input type="text" class="jumboef--input" placeholder="Name*">
+        <h3 id="jumboef-title">Hello</h3>
+        <input type="text" class="jumboef--input" style="margin-top: 20px;" placeholder="Name*">
         <input type="text" class="jumboef--input" placeholder="Company">
         <input type="text" class="jumboef--input" placeholder="Email Address*">
         <textarea placeholder="How can we help?" name="Inquiry Field" id="jumboef_inquiry" rows="3" cols="20"></textarea>
+        <a href="#" id="jumboef_button">Let's Chat</a>
       </form>
     </div>
     <!-- <div class="svg-container ">
