- Created button for jumbotron - Added Media queries for jumbotron for Mobile - Tablet

--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@
     
     <div>
       <form id="jumbo_emailform">
-        <h3 id="jumboef-title">Hello</h3>
-        <input type="text" class="jumboef--input" style="margin-top: 20px;" placeholder="Name*">
+        <h5 id="jumboef-title">Let's Get Started!</h5>
+        <p id="lead">Schedule a meeting with us so we can assist you right away</p>
+        <input type="text" class="jumboef--input" id="jumboef--input-first" placeholder="Name*">
         <input type="text" class="jumboef--input" placeholder="Company">
         <input type="text" class="jumboef--input" placeholder="Email Address*">
         <textarea placeholder="How can we help?" name="Inquiry Field" id="jumboef_inquiry" rows="3" cols="20"></textarea>
-        <a href="#" id="jumboef_button">Let's Chat</a>
+        <a href="#" id="jumboef_button">Let's Chat!</a>
       </form>
     </div>
     <!-- <div class="svg-container ">
