- Added some line height to the jumbotron title to more closely represent the design - Changed the Navbar breakpoint to expand on medium to more closely represent the design

--- a/index.html
+++ b/index.html
@@ -17,51 +17,8 @@
 </head>
 
 <body style="margin: 0; overflow-x: hidden;">
-
-
   <div class="jumbotron">
-    <!-- <nav
-      class="navbar navbar-expand-lg navbar-custom bg-transparent fixed-top"
-      id="mainNavbar"
-    >
-      <a href="index.html" class="navbar-brand">
-        <span id="street">STREET</span><i class="fas fa-pepper-hot peph"></i
-        ><span id="kitchen"> KITCHEN</span></a
-      >
-
-      <button
-        class="navbar-toggler collapsed"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="toggler-icon top-bar"></span>
-        <span class="toggler-icon middle-bar"></span>
-        <span class="toggler-icon bottom-bar"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link glink" href="#"
-              >HOME<span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="STREET KITCHEN - Order Online/streetkitchen_menu-selector.html" id="ordero" class="nav-link">ORDER ONLINE</a>
-          </li>
-          <li class="nav-item">
-            <a href="STREET KITCHEN - Our Locations/streetkitchen_location.html" class="nav-link" id="location"
-              >OUR LOCATIONS <i class="fas fa-map-marker-alt"></i
-            ></a>
-          </li>
-        </ul>
-      </div>
-    </nav> -->
-    <nav class="navbar navbar-expand-lg navbar-custom bg-transparent fixed-top" id="mainNavbar"
+    <nav class="navbar navbar-expand-md navbar-custom bg-transparent fixed-top" id="mainNavbar"
       style="position: absolute;">
       <a href="index.html" class="navbar-brand">
         <span>Digital Agency</span></a>
