- Added new breakpoint to br after "effort" in jumbo title to make it show on medium viewports - Edited jumbo title to make it make more sense

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <h1 id="jumbo_title">
       Get More Leads, <br class="d-block d-sm-none"> With Less Effort <br
-        class="d-none d-lg-block d-xl-none d-xl-block"> 24/7, <br class="d-lg-none">7 Days a Week <br> We Guarantee It
+        class="d-none d-lg-block d-xl-none d-xl-block d-md-block"> 24 Hours, <br class="d-lg-none d-md-none">7 Days a Week <br> We Guarantee It
     </h1>
 
     <img id="phone_image" src="pictures/Phone Hero Image.png" alt="">
