- Adjusted the height and width of the phone image in jumbotron on laptop viewport
- Added the skeleton of the responsive blobs, starting from the mobile s viewport.

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         </div> -->
 
 
-    <svg class="svg-container jumbo__blob" width="100px" height="144px" viewBox="0 0 163 144" version="1.1"
+    <svg class="blob" id="jumbo__blob-1" width="12%" height="40%" viewBox="0 0 163 144" version="1.1"
       xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-      style="max-height: 100%; max-width: 100%; position: absolute; z-index: -1; left: 500px; top: 70%;">
+      style="max-height: 100%; max-width: 100%; position: absolute; z-index: -1; left: 60%; top: 70%;">
       <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="Desktop" transform="translate(-879.000000, -749.000000)" fill="#D3D3D3" fill-rule="nonzero">
           <g id="Blobs" transform="translate(8.559002, 149.101243)">
@@ -111,7 +111,7 @@
     </svg>
 
 
-    <svg class="svg-container jumbo__blob" width="100px" height="120px" viewBox="0 0 300 100" version="1.1"
+    <svg class="blob" id="jumbo__blob-2" width="20%" height="40%" viewBox="0 0 300 100" version="1.1"
       xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
       style="max-height: 100%; max-width: 100%; position: absolute; z-index: -1; left: 2%; top: 1%;">
       <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -128,6 +128,50 @@
             </g>
           </g>
         </g>
+      </g>
+    </svg>
+
+
+    <svg class="blob" id="jumbo__blob-3" width="20%" height="30%" viewBox="0 0 183 173" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="max-height: 100%; max-width: 100%; position: absolute; z-index: -1; left: 30%; top: 55%;">
+      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <g id="Desktop" transform="translate(-1194.000000, -149.000000)" fill="#D3D3D3" fill-rule="nonzero">
+              <g id="Hero" transform="translate(-3.145085, 0.000000)">
+                  <g id="Blobs" transform="translate(11.704088, 149.101243)">
+                      <g id="blob-4" transform="translate(1276.900181, 86.441499) rotate(-121.000000) translate(-1276.900181, -86.441499) translate(1218.440998, 15.898757)">
+                          <path d="M112.939202,54.2074317 C121.339202,82.0074317 116.639202,111.907432 96.9392018,127.907432 C77.1392018,143.907432 42.2392018,146.007432 21.7392018,130.507432 C1.13920181,115.107432 -4.96079819,82.1074317 4.03920181,53.2074317 C13.1392018,24.3074317 37.5392018,-0.49256835 60.4392018,0.00743165004 C83.2392018,0.50743165 104.639202,26.3074317 112.939202,54.2074317 Z" id="Path"></path>
+                      </g>
+                  </g>
+              </g>
+          </g>
+      </g>
+    </svg>
+
+
+    <svg class="blob" id="jumbo__blob-4" width="20%" height="30%" viewBox="0 0 163 144" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="max-height: 100%; max-width: 100%; position: absolute; z-index: -1; left: 85%; ">
+      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <g id="Desktop" transform="translate(-1679.000000, -914.000000)" fill="#D3D3D3" fill-rule="nonzero">
+              <g id="Hero" transform="translate(-3.145085, 0.000000)">
+                  <g id="Blobs" transform="translate(11.704088, 149.101243)">
+                      <g id="blob-1" transform="translate(1670.440998, 764.898757)">
+                          <path d="M91.7769668,56.0578107 C98.1769668,80.8578107 99.6769668,102.157811 90.8769668,108.257811 C82.0769668,114.357811 63.1769668,105.157811 41.8769668,91.4578107 C20.6769668,77.8578107 -2.82303323,59.7578107 0.276966773,39.6578107 C3.37696677,19.4578107 32.9769668,-2.64218928 53.4769668,0.25781072 C73.9769668,3.25781072 85.3769668,31.3578107 91.7769668,56.0578107 Z" id="Path"></path>
+                      </g>
+                  </g>
+              </g>
+          </g>
+      </g>
+    </svg>
+
+    <svg class="blob" id="jumbo__blob-5" width="20%" height="30%" viewBox="0 0 163 144" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="max-height: 100%; max-width: 100%; position: absolute; z-index: -1; left: 70%; top: 70%;">
+      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <g id="Desktop" transform="translate(-1679.000000, -914.000000)" fill="#D3D3D3" fill-rule="nonzero">
+              <g id="Hero" transform="translate(-3.145085, 0.000000)">
+                  <g id="Blobs" transform="translate(11.704088, 149.101243)">
+                      <g id="blob-1" transform="translate(1670.440998, 764.898757)">
+                          <path d="M91.7769668,56.0578107 C98.1769668,80.8578107 99.6769668,102.157811 90.8769668,108.257811 C82.0769668,114.357811 63.1769668,105.157811 41.8769668,91.4578107 C20.6769668,77.8578107 -2.82303323,59.7578107 0.276966773,39.6578107 C3.37696677,19.4578107 32.9769668,-2.64218928 53.4769668,0.25781072 C73.9769668,3.25781072 85.3769668,31.3578107 91.7769668,56.0578107 Z" id="Path"></path>
+                      </g>
+                  </g>
+              </g>
+          </g>
       </g>
     </svg>
 
