--- a/index.html
+++ b/index.html
@@ -225,6 +225,26 @@
     </svg>
   </div>
 
+  <div id="about_section" class="container " style="margin-top: 20%;">
+    <div class="row container-fluid" style=" justify-content: center; padding: 0; margin: 0;">
+      <div id="about_section--img" class="col-12 col-sm col-lg-6">
+        <img class="img-fluid" src="Pictures/About Section Picture.png" alt="">
+      </div>
+      <div id="about_section--text" class="col-sm col-lg-6">
+        <h6 id="about_section--subtitle" style="float: left; letter-spacing: 2px; font-size: 16px;">WHO WE ARE</h6>
+        <div id="about_section--title">
+          <h6 style="float: left; font-size: 22px;">How we Propel Your 
+            Business to the Next Level</h6>
+        </div>
+        <p style="font-size: 15px; display: inline-block;">Et quidem exercitus quid ex eo delectu rerum, quem ad respondendum reddidisti quorum nihil ut earum rerum hic tenetur a philosophis compluribus 
+          permulta dicantur, cur nec voluptas in ea quid aut quid et dolore disputandum putant sed ut perspiciatis, unde omnis voluptas assumenda est</p>
+          <button class="btn btn-primary" style="font-size: 12px; letter-spacing: 1px; border-radius: 11px; float: left; background-color: #226DA0;">VIEW CATALOG</button>
+      </div>
+      
+    </div>
+  </div>
+
+
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
