--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   <div id="about_section" class="container " style="margin-top: 20%;">
     <div class="row container-fluid" style=" justify-content: center; padding: 0; margin: 0;">
       <div id="about_section--img" class="col-12 col-sm col-lg-6">
-        <img class="img-fluid" src="Pictures/About Section Picture.png" alt="">
+        <img class="img-fluid" src="Pictures/About_Section_Picture.png" alt="">
       </div>
       <div id="about_section--text" class="col-sm col-lg-6">
         <h6 id="about_section--subtitle" style="float: left; letter-spacing: 2px; font-size: 16px;">WHO WE ARE</h6>
