--- a/index.html
+++ b/index.html
@@ -225,6 +225,36 @@
     </svg>
   </div>
 
+  <div class="container text-center" style="margin-top: 20%;">
+    <div class="row">
+      <div class="col-4 col-md-2">
+        <img class="img-fluid" src="pictures/company logos/Forbes.png" alt="" >
+      </div>
+      <div class="col-4 col-md-2">
+        <img class="img-fluid" src="pictures/company logos/Business Insider.png" alt="">
+      </div>
+      <div class="col-4 col-md-2">
+        <img class="img-fluid" src="pictures/company logos/Envato.png" alt="" >
+      </div>
+      <div class="container text-center d-block d-sm-none" style="margin-top: 5%;">
+        <div class="row">
+          <div class="col-6" style="padding-right: 0;">
+            <img class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt="" style="width: 70%;">
+          </div>
+          <div class="col-6" style="padding-left: 0;">
+            <img class="img-fluid" src="pictures/company logos/Freepik.png" alt="" style="width: 50%; ">
+          </div>
+        </div>
+      </div>
+      <div class=" col d-none d-md-block d-lg-block">
+        <img class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt="">
+      </div>
+      <div class=" col col-md-2  d-none d-md-block d-lg-block">
+        <img class="img-fluid" src="pictures/company logos/Freepik.png" alt="" style="width: 70%; ">
+      </div>
+    </div>
+  </div>
+
   <div id="about_section" class="container " style="margin-top: 20%;">
     <div class="row container-fluid" style=" justify-content: center; padding: 0; margin: 0;">
       <div id="about_section--img" class="col-12 col-sm col-lg-6">
