--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       <div class="collapse navbar-collapse in" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#about_section">About<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Services</a>
           </li>
           <li class="nav-item">
-            <a href="#" id="nav-link__lastItem" class="nav-link">Contact</a>
+            <a href="#jumbo_emailform" id="nav-link__lastItem" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
