- Swapped around the Envato and Freepik Logo for aesthetic purposes on sm and xs viewports

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <img class="img-fluid" src="pictures/company logos/Business Insider.png" alt="">
       </div>
       <div class="col-4 col-md-2">
-        <img class="img-fluid" src="pictures/company logos/Envato.png" alt="" >
+        <img class="img-fluid" src="pictures/company logos/Freepik.png" alt="" style="width: 70%; ">
       </div>
       <div class="container text-center d-block d-sm-none" style="margin-top: 5%;">
         <div class="row">
@@ -242,7 +242,7 @@
             <img class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt="" style="width: 70%;">
           </div>
           <div class="col-6" style="padding-left: 0;">
-            <img class="img-fluid" src="pictures/company logos/Freepik.png" alt="" style="width: 50%; ">
+            <img class="img-fluid" src="pictures/company logos/Envato.png" alt="" style="width: 56%;">
           </div>
         </div>
       </div>
@@ -250,7 +250,7 @@
         <img class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt="">
       </div>
       <div class=" col col-md-2  d-none d-md-block d-lg-block">
-        <img class="img-fluid" src="pictures/company logos/Freepik.png" alt="" style="width: 70%; ">
+        <img class="img-fluid" src="pictures/company logos/Envato.png" alt="">
       </div>
     </div>
   </div>
