- Adjusted height and width of Envato, Alibaba and Business Insider logos in trusted companies section to look better on larger viewports

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </nav>
 
     <h1 id="jumbo_title">
-      Get More Leads, <br class="d-block d-sm-none"> With Less Effort <br
-        class="d-xl-block d-md-block"> 24 Hours, <br class="d-lg-none d-md-none">7 Days a
+      Get More Leads, <br class="d-block d-sm-none"> With Less Effort <br class="d-xl-block d-md-block"> 24 Hours, <br
+        class="d-lg-none d-md-none">7 Days a
       Week <br> We Guarantee It
     </h1>
 
@@ -206,7 +206,8 @@
         <img class="img-fluid" src="pictures/company logos/Forbes.png" alt="">
       </div>
       <div class="col-4 col-md-2">
-        <img class="img-fluid" src="pictures/company logos/Business Insider.png" alt="">
+        <img class="img-fluid" src="pictures/company logos/Business Insider.png" alt=""
+          style=" height: 70% !important;">
       </div>
       <div class="col-4 col-md-2">
         <img class="img-fluid" src="pictures/company logos/Freepik.png" alt="" style="width: 70%; ">
@@ -222,10 +223,11 @@
         </div>
       </div>
       <div class=" col d-none d-md-block d-lg-block">
-        <img class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt="">
+        <img class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt=""
+          style="width: 90%; height: 90% !important;">
       </div>
       <div class=" col col-md-2  d-none d-md-block d-lg-block">
-        <img class="img-fluid" src="pictures/company logos/Envato.png" alt="">
+        <img class="img-fluid" src="pictures/company logos/Envato.png" alt="" style=" height: 40% !important;">
       </div>
     </div>
   </div>
