--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </svg>
   </div>
 
-  <div class="container text-center" style="margin-top: 20%;">
+  <div class="container-fluid text-center" style="margin-top: 20%;">
     <div class="row">
       <div class="col-4 col-md-2">
         <img class="img-fluid" src="pictures/company logos/Forbes.png" alt="">
@@ -212,7 +212,7 @@
       <div class="col-4 col-md-2">
         <img class="img-fluid" src="pictures/company logos/Freepik.png" alt="" style="width: 70%; ">
       </div>
-      <div class="container text-center d-block d-sm-none" style="margin-top: 5%;">
+      <div class="container-fluid text-center d-block d-sm-none" style="margin-top: 5%;">
         <div class="row">
           <div class="col-6" style="padding-right: 0;">
             <img class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt="" style="width: 70%;">
