--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   <div class="container-fluid text-center" style="margin-top: 20%;">
     <div class="row">
       <div class="col-4 col-md-2">
-        <img class="img-fluid" src="pictures/company logos/Forbes.png" alt="">
+        <img class="img-fluid" src="pictures/company logos/Forbes.png" alt="" style="height: 60% !important; ">
       </div>
       <div class="col-4 col-md-2">
         <img class="img-fluid" src="pictures/company logos/Business Insider.png" alt=""
