--- a/index.html
+++ b/index.html
@@ -203,8 +203,9 @@
   <div class="container-fluid text-center" style="margin-top: 20%;">
     <div class="row">
       <div class="col-4 col-md-2">
-        <img class="img-fluid" src="pictures/company logos/Forbes.png" alt="">
+        <img id="forbes_logo" class="img-fluid" src="pictures/company logos/Forbes.png" alt=""> 
       </div>
+      <!-- style="height: 60% !important;" -->
       <div class="col-4 col-md-2">
         <img class="img-fluid" src="pictures/company logos/Business Insider.png" alt=""
           style=" height: 70% !important;">
