--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
     </svg>
   </div>
 
-  <div class="container-fluid text-center" style="margin-top: 20%;">
+  <div id="trusted_companies-banner" class="container-fluid text-center" style="margin-top: 20%;">
     <div class="row">
       <div class="col-4 col-md-2">
-        <img id="forbes_logo" class="img-fluid" src="pictures/company logos/Forbes.png" alt=""> 
+        <img id="forbes_logo" class="img-fluid" src="pictures/company logos/Forbes.png" alt="">
       </div>
       <!-- style="height: 60% !important;" -->
       <div class="col-4 col-md-2">
@@ -244,11 +244,11 @@
           <h6 style="float: left; font-size: 22px;">How we Propel Your
             Business to the Next Level</h6>
         </div>
-        <p style="font-size: 15px; display: inline-block;">Et quidem exercitus quid ex eo delectu rerum, quem ad
+        <p id="" style="font-size: 15px; display: inline-block;">Et quidem exercitus quid ex eo delectu rerum, quem ad
           respondendum reddidisti quorum nihil ut earum rerum hic tenetur a philosophis compluribus
           permulta dicantur, cur nec voluptas in ea quid aut quid et dolore disputandum putant sed ut perspiciatis, unde
           omnis voluptas assumenda est</p>
-        <button class="btn btn-primary"
+        <button class="btn btn-primary" id="about_section--button"
           style="font-size: 12px; letter-spacing: 1px; border-radius: 11px; float: left; background-color: #226DA0;">VIEW
           CATALOG</button>
       </div>
