--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="container-fluid text-center d-block d-sm-none" style="margin-top: 5%;">
         <div class="row">
           <div class="col-6" style="padding-right: 0;">
-            <img class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt="" style="width: 70%;">
+            <img id="ali_logo" class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt="" style="width: 70%;">
           </div>
           <div class="col-6" style="padding-left: 0;">
             <img class="img-fluid" src="pictures/company logos/Envato.png" alt="" style="width: 56%;">
