-- readjusted text on tablet view for about main text

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           <h6 style="float: left; font-size: 22px;">How we Propel Your
             Business to the Next Level</h6>
         </div>
-        <p id="" style="font-size: 15px; display: inline-block;">Et quidem exercitus quid ex eo delectu rerum, quem ad
+        <p id="about_section--maintext" style="font-size: 15px; display: inline-block;">Et quidem exercitus quid ex eo delectu rerum, quem ad
           respondendum reddidisti quorum nihil ut earum rerum hic tenetur a philosophis compluribus
           permulta dicantur, cur nec voluptas in ea quid aut quid et dolore disputandum putant sed ut perspiciatis, unde
           omnis voluptas assumenda est</p>
