--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     </div>
   </div>
 
-  <div id="about_section" class="container " style="margin-top: 20%;">
+  <div id="about_section" class="container" style="margin-top: 20%;">
     <div class="row container-fluid" style=" justify-content: center; padding: 0; margin: 0;">
       <div id="about_section--img" class="col-12 col-sm col-lg-6">
         <img class="img-fluid" src="pictures/About_Section_Picture.png" alt="">
@@ -252,7 +252,36 @@
           style="font-size: 12px; letter-spacing: 1px; border-radius: 11px; float: left; background-color: #226DA0;">VIEW
           CATALOG</button>
       </div>
+    </div>
+  </div>
 
+  <div class="card-deck mx-3" style="margin-top: 20%;">
+    <div class="card text" >
+      <img class="card-img-top mx-auto" src="pictures/Service Section Icon 1.svg" alt="Card image cap">
+      <div class="card-body">
+        <div class="border-left"></div>
+        <h5 class="card-title">Design & Develop</h5>
+        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent? at id est eligendi optio, cumque nihil impedit.</p>
+        <p class="card-text"><small class="text-muted">Read More...</small></p>
+      </div>
+    </div>
+    
+    <div class="card">
+      <img class="card-img-top mx-auto" src="pictures/Service Section Icon 2.svg" alt="Card image cap">
+      <div class="card-body">
+        <div class="border-left"></div>
+        <h5 class="card-title">Search Engine Optimization</h5>
+        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent? at id est eligendi optio, cumque nihil impedit.</p>
+        <p class="card-text"><small class="text-muted">Read More...</small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top mx-auto" src="pictures/Service Section Icon 3.svg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Marketing Campaigns</h5>
+        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent? at id est eligendi optio, cumque nihil impedit.</p>
+        <p class="card-text"><small class="text-muted">Read More...</small></p>
+      </div>
     </div>
   </div>
 
