- Made the Read More small text in the service section cards anchor tags
- Adjusted margin top for the service section to 15% from 20%

--- a/index.html
+++ b/index.html
@@ -255,14 +255,14 @@
     </div>
   </div>
 
-  <div class="card-deck mx-3" style="margin-top: 20%;">
+  <div class="card-deck mx-3">
     <div class="card text" >
       <img class="card-img-top mx-auto" src="pictures/Service Section Icon 1.svg" alt="Card image cap">
       <div class="card-body">
         <div class="border-left"></div>
         <h5 class="card-title">Design & Develop</h5>
         <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent? at id est eligendi optio, cumque nihil impedit.</p>
-        <p class="card-text"><small class="text-muted">Read More...</small></p>
+        <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
       </div>
     </div>
     
@@ -272,7 +272,7 @@
         <div class="border-left"></div>
         <h5 class="card-title">Search Engine Optimization</h5>
         <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent? at id est eligendi optio, cumque nihil impedit.</p>
-        <p class="card-text"><small class="text-muted">Read More...</small></p>
+        <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
       </div>
     </div>
     <div class="card">
@@ -280,7 +280,7 @@
       <div class="card-body">
         <h5 class="card-title">Marketing Campaigns</h5>
         <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent? at id est eligendi optio, cumque nihil impedit.</p>
-        <p class="card-text"><small class="text-muted">Read More...</small></p>
+        <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
       </div>
     </div>
   </div>
