--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="#about_section">About<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Services</a>
+            <a href="#service_section" class="nav-link">Services</a>
           </li>
           <li class="nav-item">
             <a href="#jumbo_emailform" id="nav-link__lastItem" class="nav-link">Contact</a>
@@ -255,7 +255,7 @@
     </div>
   </div>
 
-  <div class="card-deck mx-3">
+  <div id="service_section" class="card-deck mx-3">
     <div class="card text" >
       <img class="card-img-top mx-auto" src="pictures/Service Section Icon 1.svg" alt="Card image cap">
       <div class="card-body">
