--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
             </svg>
         </div> -->
     <svg id="jumbo_wave" viewBox="0 0 1440 320" version="1.1" xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink" style="z-index: -9999; position: absolute;">
+      xmlns:xlink="http://www.w3.org/1999/xlink" style="z-index: -9999; position: relative; bottom: 1px;">
+      <!-- Below is the original styling for the wave for positioning -->
+      <!-- style="z-index: -9999; position: relative; bottom: 1px;" -->
       <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="Desktop" transform="translate(0.000000, -999.000000)" fill="#0099FF" fill-rule="nonzero">
           <g id="Hero" transform="translate(-20.264017, 0.000000)">
