- Reduced the height of container of svg wave to zero to fix unnecessary spacing between wave and company banner, and to keep the white line fix in previous commit

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
   </div>
 
-  <div>
+  <div style="height: 0;">
     <!-- Below is Blob for overlapping wave -->
     <!-- <div class="svg-container">
             <svg width="180" height="auto"
@@ -186,8 +186,8 @@
         </div> -->
     <svg id="jumbo_wave" viewBox="0 0 1440 320" version="1.1" xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink" style="z-index: -9999; position: relative; bottom: 1px;">
-      <!-- Below is the original styling for the wave for positioning -->
-      <!-- style="z-index: -9999; position: relative; bottom: 1px;" -->
+      <!-- Below is the original styling for the above wave for positioning -->
+      <!-- style="z-index: -9999; position: absolute;-->
       <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="Desktop" transform="translate(0.000000, -999.000000)" fill="#0099FF" fill-rule="nonzero">
           <g id="Hero" transform="translate(-20.264017, 0.000000)">
