--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#service_section" class="nav-link">Services</a>
           </li>
           <li class="nav-item">
-            <a href="#jumbo_emailform" id="nav-link__lastItem" class="nav-link">Contact</a>
+            <a href="#" id="nav-link__lastItem" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
