--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body style="margin: 0; overflow-x: hidden;">
-  <div class="jumbotron">
+  <div class="jumbotron" style="width: 100% !important;">
     <nav class="navbar navbar-expand-md navbar-custom bg-transparent fixed-top" id="mainNavbar"
       style="position: absolute;">
       <a href="index.html" class="navbar-brand">
@@ -185,7 +185,7 @@
             </svg>
         </div> -->
     <svg id="jumbo_wave" viewBox="0 0 1440 320" version="1.1" xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink" style="z-index: -9999; position: absolute;">
+      xmlns:xlink="http://www.w3.org/1999/xlink" style="z-index: -9999; position: absolute; margin-top: -1px;">
       <!-- Below is the original styling for the above wave for positioning -->
       <!-- style="z-index: -9999; position: absolute;-->
       <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
