--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body style="margin: 0; overflow-x: hidden;">
+<body class="px-0" style="margin: 0; overflow-x: hidden; padding-left: 0; padding-right: 0; width: 100%;">
   <div class="jumbotron" style="width: 100% !important;">
     <nav class="navbar navbar-expand-md navbar-custom bg-transparent fixed-top" id="mainNavbar"
       style="position: absolute;">
@@ -185,7 +185,7 @@
             </svg>
         </div> -->
     <svg id="jumbo_wave" viewBox="0 0 1440 320" version="1.1" xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink" style="z-index: -9999; position: absolute; margin-top: -1px;">
+      xmlns:xlink="http://www.w3.org/1999/xlink" style="z-index: -9999; position: relative; bottom: 1px;">
       <!-- Below is the original styling for the above wave for positioning -->
       <!-- style="z-index: -9999; position: absolute;-->
       <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -218,7 +218,8 @@
       <div class="container-fluid text-center d-block d-sm-none" style="margin-top: 5%;">
         <div class="row">
           <div class="col-6" style="padding-right: 0;">
-            <img id="ali_logo" class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt="" style="width: 70%;">
+            <img id="ali_logo" class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt=""
+              style="width: 70%;">
           </div>
           <div class="col-6" style="padding-left: 0;">
             <img class="img-fluid" src="pictures/company logos/Envato.png" alt="" style="width: 56%;">
@@ -246,7 +247,8 @@
           <h6 style="float: left; font-size: 22px;">How we Propel Your
             Business to the Next Level</h6>
         </div>
-        <p id="about_section--maintext" style="font-size: 15px; display: inline-block;">Et quidem exercitus quid ex eo delectu rerum, quem ad
+        <p id="about_section--maintext" style="font-size: 15px; display: inline-block;">Et quidem exercitus quid ex eo
+          delectu rerum, quem ad
           respondendum reddidisti quorum nihil ut earum rerum hic tenetur a philosophis compluribus
           permulta dicantur, cur nec voluptas in ea quid aut quid et dolore disputandum putant sed ut perspiciatis, unde
           omnis voluptas assumenda est</p>
@@ -258,22 +260,24 @@
   </div>
 
   <div id="service_section" class="card-deck mx-3">
-    <div class="card text" >
+    <div class="card text">
       <img class="card-img-top mx-auto" src="pictures/Service Section Icon 1.svg" alt="Card image cap">
       <div class="card-body">
         <div class="border-left"></div>
         <h5 class="card-title">Design & Develop</h5>
-        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent? at id est eligendi optio, cumque nihil impedit.</p>
+        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
+          at id est eligendi optio, cumque nihil impedit.</p>
         <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
       </div>
     </div>
-    
+
     <div class="card">
       <img class="card-img-top mx-auto" src="pictures/Service Section Icon 2.svg" alt="Card image cap">
       <div class="card-body">
         <div class="border-left"></div>
         <h5 class="card-title">Search Engine Optimization</h5>
-        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent? at id est eligendi optio, cumque nihil impedit.</p>
+        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
+          at id est eligendi optio, cumque nihil impedit.</p>
         <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
       </div>
     </div>
@@ -281,7 +285,8 @@
       <img class="card-img-top mx-auto" src="pictures/Service Section Icon 3.svg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Marketing Campaigns</h5>
-        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent? at id est eligendi optio, cumque nihil impedit.</p>
+        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
+          at id est eligendi optio, cumque nihil impedit.</p>
         <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
       </div>
     </div>
