- Took away unnecessary styling from body

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body class="px-0" style="margin: 0; overflow-x: hidden; padding-left: 0; padding-right: 0; width: 100%;">
+<body class="px-0" style="margin: 0; overflow-x: hidden;">
   <div class="jumbotron" style="width: 100% !important;">
     <nav class="navbar navbar-expand-md navbar-custom bg-transparent fixed-top" id="mainNavbar"
       style="position: absolute;">
