- testing to see if border left divider is giving extra padding

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <div class="card text">
       <img class="card-img-top mx-auto" src="pictures/Service Section Icon 1.svg" alt="Card image cap">
       <div class="card-body">
-        <div class="border-left"></div>
+        <!-- <div class="border-left"></div> -->
         <h5 class="card-title">Design & Develop</h5>
         <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
           at id est eligendi optio, cumque nihil impedit.</p>
@@ -274,7 +274,7 @@
     <div class="card">
       <img class="card-img-top mx-auto" src="pictures/Service Section Icon 2.svg" alt="Card image cap">
       <div class="card-body">
-        <div class="border-left"></div>
+        <!-- <div class="border-left"></div> -->
         <h5 class="card-title">Search Engine Optimization</h5>
         <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
           at id est eligendi optio, cumque nihil impedit.</p>
