- Adjusted test sizes for multiple viewports

--- a/index.html
+++ b/index.html
@@ -259,39 +259,45 @@
     </div>
   </div>
 
-  <div id="service_section" class="card-deck mx-3">
-    <div class="card text">
-      <img class="card-img-top mx-auto" src="pictures/Service Section Icon 1.svg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Design & Develop</h5>
-        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
-          at id est eligendi optio, cumque nihil impedit.</p>
-        <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
-      </div>
+  <section id="service_section-wrapper">
+    <div id="service_section-titlewrapper" style="text-align: center;">
+      <p id="service_title-lead" style="margin-bottom: 5px; color: #0099FF;">Our Services</p>
+      <h4 id="service_title">What We Do For You</h4>
     </div>
 
-    <div class="card">
-      <img class="card-img-top mx-auto" src="pictures/Service Section Icon 2.svg" alt="Card image cap">
-      <div class="card-body">
-        <div class="border-left"></div>
-        <h5 class="card-title">Search Engine Optimization</h5>
-        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
-          at id est eligendi optio, cumque nihil impedit.</p>
-        <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
+    <div id="service_section" class="card-deck mx-3">
+      <div class="card text">
+        <img class="card-img-top mx-auto" src="pictures/Service Section Icon 1.svg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Design & Develop</h5>
+          <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
+            at id est eligendi optio, cumque nihil impedit.</p>
+          <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top mx-auto" src="pictures/Service Section Icon 3.svg" alt="Card image cap">
-      <div class="card-body">
-        <div class="border-left"></div>
-        <h5 class="card-title">Marketing Campaigns</h5>
-        <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
-          at id est eligendi optio, cumque nihil impedit.</p>
-        <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
-      </div>
-    </div>
-  </div>
 
+      <div class="card">
+        <img class="card-img-top mx-auto" src="pictures/Service Section Icon 2.svg" alt="Card image cap">
+        <div class="card-body">
+          <div class="border-left"></div>
+          <h5 class="card-title">Search Engine Optimization</h5>
+          <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
+            at id est eligendi optio, cumque nihil impedit.</p>
+          <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top mx-auto" src="pictures/Service Section Icon 3.svg" alt="Card image cap">
+        <div class="card-body">
+          <div class="border-left"></div>
+          <h5 class="card-title">Marketing Campaigns</h5>
+          <p class="card-text">Probabo, inquit, sic agam, ut summum bonum sit voluptatem ut de commodis suis cogitarent?
+            at id est eligendi optio, cumque nihil impedit.</p>
+          <p class="card-text"><small class="text-muted"><a href="#">Read More...</a></small></p>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </body>
 
