--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="#about_section">About<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a href="#service_section" class="nav-link">Services</a>
+            <a href="#service_section-titlewrapper" class="nav-link">Services</a>
           </li>
           <li class="nav-item">
             <a href="#" id="nav-link__lastItem" class="nav-link">Contact</a>
