- Added id's to Alibaba logo and Business Insider
- Adjusted Business Insider Logo, Alibaba Logo and Forbes logo on Laptop L to look less cluttered.

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
       </div>
       <!-- style="height: 60% !important;" -->
       <div class="col-4 col-md-2">
-        <img class="img-fluid" src="pictures/company logos/Business Insider.png" alt=""
-          style=" height: 70% !important;">
+        <img id="busins_logo" class="img-fluid" src="pictures/company logos/Business Insider.png" alt=""
+          style=" ">
       </div>
       <div class="col-4 col-md-2">
         <img class="img-fluid" src="pictures/company logos/Freepik.png" alt="" style="width: 70%; ">
@@ -227,8 +227,8 @@
         </div>
       </div>
       <div class=" col d-none d-md-block d-lg-block">
-        <img class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt=""
-          style="width: 90%; height: 90% !important;">
+        <img id="ali_logo-reg" class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt=""
+          style="width: 90%;">
       </div>
       <div class=" col col-md-2  d-none d-md-block d-lg-block">
         <img class="img-fluid" src="pictures/company logos/Envato.png" alt="" style=" height: 40% !important;">
