--- a/index.html
+++ b/index.html
@@ -209,11 +209,10 @@
       </div>
       <!-- style="height: 60% !important;" -->
       <div class="col-4 col-md-2">
-        <img id="busins_logo" class="img-fluid" src="pictures/company logos/Business Insider.png" alt=""
-          style=" ">
+        <img id="busins_logo" class="img-fluid" src="pictures/company logos/Business Insider.png" alt="">
       </div>
       <div class="col-4 col-md-2">
-        <img class="img-fluid" src="pictures/company logos/Freepik.png" alt="" style="width: 70%; ">
+        <img id="fp_logo" class="img-fluid" src="pictures/company logos/Freepik.png" alt="" >
       </div>
       <div class="container-fluid text-center d-block d-sm-none" style="margin-top: 5%;">
         <div class="row">
@@ -231,7 +230,7 @@
           style="width: 90%;">
       </div>
       <div class=" col col-md-2  d-none d-md-block d-lg-block">
-        <img class="img-fluid" src="pictures/company logos/Envato.png" alt="" style=" height: 40% !important;">
+        <img id="env_logo" class="img-fluid" src="pictures/company logos/Envato.png" alt="">
       </div>
     </div>
   </div>
