--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="col-4 col-md-2">
         <img id="fp_logo" class="img-fluid" src="pictures/company logos/Freepik.png" alt="">
       </div>
-      <div class="container-fluid text-center d-block d-sm-none" style="margin-top: 5%;">
+      <div class="container-fluid text-center d-block d-sm-block d-md-none" style="margin-top: 5%;">
         <div class="row">
           <div class="col-6" style="padding-right: 0;">
             <img id="ali_logo" class="img-fluid" src="pictures/company logos/Alibaba Group.png" alt=""
