- Made the Jumbotron and Services section responsive on 4k viewport

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <input type="text" class="jumboef--input" placeholder="Email Address*">
         <textarea placeholder="How can we help?" name="Inquiry Field" id="jumboef_inquiry" rows="3"
           cols="20"></textarea>
-        <a href="#" id="jumboef_button">Let's Chat!</a>
+        <a href="#" id="jumboef_button" >Let's Chat!</a>
       </form>
     </div>
     <!-- <div class="svg-container ">
@@ -254,8 +254,7 @@
           permulta dicantur, cur nec voluptas in ea quid aut quid et dolore disputandum putant sed ut perspiciatis, unde
           omnis voluptas assumenda est</p>
         <button class="btn btn-primary" id="about_section--button"
-          style="font-size: 12px; letter-spacing: 1px; border-radius: 11px; float: left; background-color: #226DA0;">VIEW
-          CATALOG</button>
+          style="font-size: 12px; letter-spacing: 1px; border-radius: 11px; float: left; background-color: #226DA0;"><p>VIEW CATALOG</p></button>
       </div>
     </div>
   </div>
